--- a/gb/21/1/14/n12686761.md
+++ b/gb/21/1/14/n12686761.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ysctsh3642/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ysctsh3642/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ysctsh3642/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ysctsh3642/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ysctsh3642/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ysctsh3642/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ysctsh3642/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ysctsh3642/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ysctsh3642/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ysctsh3642/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ysctsh3642/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ysctsh3642/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ysctsh3642/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ysctsh3642/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ysctsh3642/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ysctsh3642/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ysctsh3642/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ysctsh3642/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ysctsh3642/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ysctsh3642/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ysctsh3642/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ysctsh3642/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ysctsh3642/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ysctsh3642/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【西岸观察】遭左派封杀 川普家族生意也被殃及</h2>
-<a href="https://git.io/Jtfbu"><img width="600" src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ysctsh3642/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://dervszfjn9udk.cloudfront.net/H5h2Egyob"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>纽约市解除川普集团所有合同；众院通过弹劾决议，施压彭斯罢免川普；挺川议员：左派玩火；民调：60%选民不赞同弹劾；彭斯：不会援引第二十五修正案；川普：反对任何形式暴力｜1月13日【西岸观察】（大纪元制图）
 </h6>
 <hr>
-	<p>【大纪元2021年01月14日讯】大家好！欢迎收看<ahref="https://github.com/ysctsh3642/djy/blob/master/gb/tag/%E8%A5%BF%E5%B2%B8%E8%A7%82%E5%AF%9F.md#1">西岸观察</a>，我是林骁然。今天是1月13日，星期三。今天主要和大家讨论这么几个话题，距离川普卸任只有一周，<ahref="https://github.com/ysctsh3642/djy/blob/master/gb/tag/%E4%BD%A9%E6%B4%9B%E8%A5%BF.md#1">佩洛西</a>和民主党为何还要推动新的总统弹劾案，对此美国民众有哪些反应？不仅遭遇<ahref="https://github.com/ysctsh3642/djy/blob/master/gb/tag/%E7%A4%BE%E4%BA%A4%E5%AA%92%E4%BD%93.md#1">社交媒体</a>禁言，川普家族的商业活动为何也遭遇限制。</p>
-<h2>左派向<ahref="https://github.com/ysctsh3642/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE%E5%AE%B6%E6%97%8F%E7%94%9F%E6%84%8F.md#1">川普家族生意</a>动手</h2>
+	<p>【大纪元2021年01月14日讯】大家好！欢迎收看<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A5%BF%E5%B2%B8%E8%A7%82%E5%AF%9F.md#1">西岸观察</a>，我是林骁然。今天是1月13日，星期三。今天主要和大家讨论这么几个话题，距离川普卸任只有一周，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BD%A9%E6%B4%9B%E8%A5%BF.md#1">佩洛西</a>和民主党为何还要推动新的总统弹劾案，对此美国民众有哪些反应？不仅遭遇<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A4%BE%E4%BA%A4%E5%AA%92%E4%BD%93.md#1">社交媒体</a>禁言，川普家族的商业活动为何也遭遇限制。</p>
+<h2>左派向<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE%E5%AE%B6%E6%97%8F%E7%94%9F%E6%84%8F.md#1">川普家族生意</a>动手</h2>
 <p>冲击国会事件之后，最近社交平台推特和脸书接连宣称永久封锁川普总统的账号，全球最大的视频平台YouTube，昨晚也宣告冻结他的个人账号一周。这意味着该频道将至少7天不得上传新的影音内容或是启动直播，并且禁令可能还会延长。对于川普来说，又少了一个可以自由发声的渠道。</p>
 <p>左派不仅针对川普的言论自由下手，又将触手伸向了川普的家族生意。今天纽约民主党市长白思豪（Bill de Blasio）表示，纽约市将中止与川普集团（Trump Organization）的所有合同。白思豪给出的理由是，川普“煽动叛乱”显然是“犯罪行为”。</p>
 <p>根据与市府的合同，川普集团经营着中央公园内的两个溜冰场和一个旋转木马，以及布朗士区的一个高尔夫球场，这四份合同每年的总值为1700万元。</p>
@@ -15,9 +15,9 @@
 <p>川普集团的执行副总裁、川普总统次子埃里克（Eric Trump）认为，与他们家族生意切断商业往来的举动，实则是左派“取消文化”运动的一部分，他说“如果你不同意他们，如果他们不喜欢你，就会试图打倒你。”</p>
 <h2>众院深夜通过弹劾决议 施压彭斯罢免川普</h2>
 <p>昨天深夜，民主党人控制的美国国会众议院通过一项决议案，要求副总统彭斯和内阁使用宪法权力，援引宪法第25条修正案罢免川普总统，并宣称川普已无力履行其职责，敦促彭斯必须在24小时内做出回应。当晚的投票223票赞成，205票反对，以微弱多数获得通过。共和党议员中有三位投了赞成票。</p>
-<p>议长<ahref="https://github.com/ysctsh3642/djy/blob/master/gb/tag/%E4%BD%A9%E6%B4%9B%E8%A5%BF.md#1">佩洛西</a>在投票前发言称，川普总统上周三怂恿支持者向国会前进并投入战斗，但后来对国会大楼内发生的致命骚乱事件概不负责。 她说，“总统的行动表明他绝对不能够行使总统最基本和最根本的权力和责任。因此，必须立即将总统解职。”</p>
-<p>投了赞成票的共和党国会众议员利兹·切尼（Liz Cheney）则在一份声明中宣称，川普1月6日的行为是美国历任总统中对“总统职务及对宪法誓言”的最严重背叛。利兹·切尼来自怀俄明州，是前副总统切尼（Dick Cheney）的女儿，目前担任共和党众议院党团会议主席，被认为是共和党在众院的第三号人物。切尼是目前共和党内少数公开支持<ahref="https://github.com/ysctsh3642/djy/blob/master/gb/tag/%E5%BC%B9%E5%8A%BE%E5%B7%9D%E6%99%AE.md#1">弹劾川普</a>的政治人物。</p>
-<div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://git.io/Jtfbu"><img width="600" src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ysctsh3642/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/egG_yDhfQ7c?wmode=transparent&#038;wmode=opaque"allowfullscreen></a>
+<p>议长<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BD%A9%E6%B4%9B%E8%A5%BF.md#1">佩洛西</a>在投票前发言称，川普总统上周三怂恿支持者向国会前进并投入战斗，但后来对国会大楼内发生的致命骚乱事件概不负责。 她说，“总统的行动表明他绝对不能够行使总统最基本和最根本的权力和责任。因此，必须立即将总统解职。”</p>
+<p>投了赞成票的共和党国会众议员利兹·切尼（Liz Cheney）则在一份声明中宣称，川普1月6日的行为是美国历任总统中对“总统职务及对宪法誓言”的最严重背叛。利兹·切尼来自怀俄明州，是前副总统切尼（Dick Cheney）的女儿，目前担任共和党众议院党团会议主席，被认为是共和党在众院的第三号人物。切尼是目前共和党内少数公开支持<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BC%B9%E5%8A%BE%E5%B7%9D%E6%99%AE.md#1">弹劾川普</a>的政治人物。</p>
+<div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://dervszfjn9udk.cloudfront.net/H5h2Egyob"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/egG_yDhfQ7c?wmode=transparent&#038;wmode=opaque"allowfullscreen></a>
 	</div>
 <h2>挺川议员：左派玩火 民调：60%选民不赞同弹劾</h2>
 <p>佛州共和党参议员盖茨（Matt Gaetz）昨晚为川普公开辩护，直指这是非常不受欢迎的弹劾提案。他说：“美国民众希望我们在这里对付冠状病毒，而不是仇恨川普的病毒，而民主党人似乎没有找到可用于该病毒的疫苗。”</p>
@@ -27,7 +27,7 @@
 <p>“真相工程”创办人、保守派调查记者奥基夫（James O&#8217;Keefe）昨天发布了一段2分多钟的视频，PBS的首席法律顾问贝勒（Michael Beller）表示，如果2020大选中民主党人拜登不能胜选并换掉川普总统的话，他呼吁左翼暴力组织安提法和黑命贵“去白宫扔燃烧瓶”。</p>
 <p>贝勒还认为大部分美国人都很愚蠢，特别是川普的支持者和共和党人，他还提议要把川普支持者们的孩子们都关到“再教育营”里，并让孩子们在“再教育营”里天天看PBS的节目《芝麻街》。</p>
 <p>PBS不是私人媒体公司，而是由美国纳税人的钱资助的公共广播电视。但是近年来，PBS左倾比较严重。贝勒的这些话被曝光后，PBS迅速做出了反应，立即炒掉了贝勒。</p>
-<p>对于再度<ahref="https://github.com/ysctsh3642/djy/blob/master/gb/tag/%E5%BC%B9%E5%8A%BE%E5%B7%9D%E6%99%AE.md#1">弹劾川普</a>，美国民调机构麦克拉夫林（McLaughlin &amp; Associates）10日和11日两天针对800名摇摆州选民的调查显示，大多数选民认为弹劾是在浪费时间和金钱，而民主党正在玩弄政治，继续攻击川普只会使情况变得更糟。</p>
+<p>对于再度<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BC%B9%E5%8A%BE%E5%B7%9D%E6%99%AE.md#1">弹劾川普</a>，美国民调机构麦克拉夫林（McLaughlin &amp; Associates）10日和11日两天针对800名摇摆州选民的调查显示，大多数选民认为弹劾是在浪费时间和金钱，而民主党正在玩弄政治，继续攻击川普只会使情况变得更糟。</p>
 <p>具体来看，60%的选民不赞同佩洛西和民主党的弹劾努力；77%的选民认为，国会本周应该优先对付冠状病毒；74%选民认为，佩洛西和民主党人在拜登宣誓就职后，仍然试图弹劾川普是有政治动机的，是为了防止他再次竞选，以及剥夺特勤局对他的保护；48%的选民不太会继续支持投票赞成弹劾的国会议员；80%的川普选民和76%的共和党人不太会继续支持投票赞成弹劾的国会议员。</p>
 <p>民调还发现，74%的选民认为，如果推特、脸书和谷歌等大科技公司可以审查并剥夺总统的言论自由权，那么，它们就可以剥夺任何美国人的言论自由权利。</p>
 <h2>民主党弹劾川普 麦康奈尔乐观其成？</h2>
@@ -46,49 +46,48 @@
 <p>民主党推动弹劾川普，副总统彭斯的态度非常关键。昨天国会表决前，彭斯致信佩洛西，明确表示他不会援引第二十五修正案，将川普总统免职。</p>
 <p>彭斯说：“在总统任期仅剩8天的情况下，你和民主党核心小组却要求我和内阁援引第25条修正案。我认为，这样的行动并不符合我们国家的最佳利益，也不符合我们的宪法。”“上周，我没有屈服于压力，没有超越我的宪法权限行使权力来决定选举结果。现在，我也不会屈服于众议院在我们国家生活如此严峻的时刻玩政治游戏的努力。”</p>
 <p>好了，今天的节目就到这里了。如果喜欢我的节目，就请点赞、订阅和转发吧。咱们下期再会！</p>
-<p>【<ahref="https://github.com/ysctsh3642/djy/blob/master/gb/tag/%E8%A5%BF%E5%B2%B8%E8%A7%82%E5%AF%9F.md#1">西岸观察</a>】制作组</p>
+<p>【<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A5%BF%E5%B2%B8%E8%A7%82%E5%AF%9F.md#1">西岸观察</a>】制作组</p>
 <p>责任编辑：王曦#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ysctsh3642/djy/blob/master/gb/21/1/12/n12682075.md#1">【更新1.12】彭斯拒绝引用第25条罢免川普</a></li>
-<li><a href="https://github.com/ysctsh3642/djy/blob/master/gb/21/1/12/n12682348.md#1">美众议院弹劾方案 专家：左派用中共策略对付川普</a></li>
-<li><a href="https://github.com/ysctsh3642/djy/blob/master/gb/21/1/12/n12683168.md#1">左派把持社群媒体 分析：美走向“墙国”仅剩三步</a></li>
-<li><a href="https://github.com/ysctsh3642/djy/blob/master/gb/21/1/12/n12683652.md#1">川普1月6日后首次公开讲话 澄清多个问题</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/12/n12682075.md#1">【更新1.12】彭斯拒绝引用第25条罢免川普</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/12/n12682348.md#1">美众议院弹劾方案 专家：左派用中共策略对付川普</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/12/n12683168.md#1">左派把持社群媒体 分析：美走向“墙国”仅剩三步</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/12/n12683652.md#1">川普1月6日后首次公开讲话 澄清多个问题</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/4/n10360803.md#1" target="_blank">共产暴政录：统购统销洗劫中国农民</a></li><li><a href="https://github.com/ysctsh3642/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/10/n7538390.md#1" target="_blank">晚期食道癌患者：法轮功救了我的命</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/21/n9978292.md#1" target="_blank">文革中自杀的几个名人（8）“御用文人”吴晗</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/8/22/n9555520.md#1" target="_blank">为什么绝症有时可以不医而愈？</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/20/12/30/n12653736.md#1">【命理】应享福或应受苦 命中有定数</a></li>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/20/10/3/n12449907.md#1">《圣经》与《推背图》预言的应验与变换12</a></li>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/21/1/5/n12667124.md#1">大疫将行 三指中共</a></li>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/21/1/13/n12684593.md#1">美国CIA解密大量UFO文件 网上可下载</a></li>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/21/1/11/n12680516.md#1">犹太拉比：科技巨头审查言论是反神的战争</a></li>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/21/1/13/n12685538.md#1">【微视频】中国三款疫苗问题多 科兴有效率50%</a></li>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/21/1/11/n12681543.md#1">【时事军事】英部署南海航母战斗群 向中共发难</a></li>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/21/1/13/n12685833.md#1">【时事纵横】川普解密病毒情报？中共毁灭证据</a></li>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/21/1/11/n12679740.md#1">【更新1.11】共和党叫停民主党首次罢免川普表决</a></li>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/21/1/12/n12681963.md#1">【有冇搞错】马云外逃？中国是大重构下个目标</a></li>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/21/1/12/n12682033.md#1">川普宣布华府进入紧急状态 并提供联邦援助</a></li>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/21/1/12/n12681992.md#1">晒与张钧甯等艺人合照 范冰冰：还是闺密靠谱</a></li>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/21/1/13/n12684292.md#1">杨颖受攻击 黄晓明护妻：冲我来 评论永不关闭</a></li>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/21/1/12/n12683780.md#1">章子怡首拍电视剧惹负评 汪峰晒照发文护妻</a></li>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/21/1/11/n12681730.md#1">粉丝好奇如何拍逼真断腿戏 刘德华幽默回应</a></li>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/21/1/11/n12681461.md#1">率性封锁四字关键词 杨超越微博引网友围观</a></li>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/21/1/11/n12681545.md#1">彩色口罩含致癌物？医师：3种颜色较安全</a></li>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/21/1/12/n12682337.md#1">诺查丹玛斯预言成真？ 小行星13日接近地球</a></li>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/21/1/13/n12684593.md#1">美国CIA解密大量UFO文件 网上可下载</a></li>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/21/1/12/n12682606.md#1">奇特画面：男子在游泳池内 头部与身体分离</a></li>
-<li><a href="https://github.com/nzumzt3336/djy/blob/master/gb/21/1/11/n12680516.md#1">犹太拉比：科技巨头审查言论是反神的战争</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ysctsh3642/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ysctsh3642/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/14/n12686761.htm">【西岸观察】遭左派封杀 川普家族生意也被殃及</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/14/n12686761.htm">【西岸观察】遭左派封杀 川普家族生意也被殃及</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ysctsh3642/djy/blob/master/gb/21/1/14/n12686761.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ysctsh3642/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ysctsh3642/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ysctsh3642/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ysctsh3642/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysctsh3642/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/1/14/n12686761.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
